# rc-translator

./: .env  .gitignore  Dockerfile  README.md  bot.py  callback_handler.py  command_handler.py  config.py  docker-compose.yml  loader.py  main.py  myclass.py  mymodule.py  pyproject.toml  requirements.txt  server.db  test.py  utils.py  words.txt
classes/: __init__.py  database.py  myclass.py  parser.py
config/: common.py  dev.py  prod.py
core/: conf.py  database.py  langs.py  logger.py  parser.py  settings.py  states.py  translator.py
core/commands/: admin.py  common.py
core/conf/: __init__.py  langs.py  learning_mode.py  settings.py
data/: config.py  server.db
draft/: finite_state_machine_example.py  main.py  test.py
handlers/: __init__.py  all_messages.py  cancel.py  empty_messages.py  exceptions.py  rating.py  run.py  start.py
handlers/admin/: __init__.py  send_all.py  send_one.py  users.py
handlers/callbacks/: __init__.py  callback.py  callbacks.py  grammar.py  setsub.py  show_examples.py
handlers/commands/: __init__.py  admin.py  admin_cmds.py  cancel.py  command.py  commands.py  grammar.py  rating.py  sentence.py  setsub.py  start.py  test.py  word.py
handlers/exceptions/: __init__.py  cancel.py  chat_not_private.py  empty_messages.py  reset.py  (+1 more)
modules/: __init__.py  learner.py  mymodule.py
production/: .env  .env.prod  Dockerfile  docker-compose.yml
telebot_addon/: mymodule.py
utils/: __init__.py  buttons.py  database.py  decorators.py  formatters.py  other.py  parser.py  path.py  states.py  text.py  translator.py  utils.py
(+21 files in other folders)
